fixed spacing of p tags inside the textbox-body

--- a/src/components/Textbox/style.css
+++ b/src/components/Textbox/style.css
@@ -35,23 +35,27 @@
 .text-receive {
   border-radius: 30px;
   background-color: var(--menu);
-  margin: 10px;
+  margin: 10px 10px 0 10px;
   padding-left: 20px;
-  min-width: 300px;
-  max-width: 400px;
+  padding-right: 20px;
+  /* min-width: 300px; */
+  max-width: 80%;
   align-self: flex-start;
 }
 
 .textbox-body p {
+  font-size: 2rem;
   color: white;
+  margin: auto;
 }
 
 .text-sent {
   border-radius: 30px;
   background-color: var(--thirdShadow);
-  min-width: 300px;
-  max-width: 400px;
-  margin-right: 10px;
+  /* min-width: 300px; */
+  max-width: 80%;
+  margin: 10px 10px 0 10px;
+  padding-left: 20px;
   padding-right: 20px;
   align-self: flex-end;
 }
